--- a/style/style.css
+++ b/style/style.css
@@ -28,24 +28,30 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
+.wrapper{
+    width: 960px;
+    margin: 0 auto;
+}
 .forms__container {
     display: flex;
-    justify-content: space-evenly;
-    margin-top: 20px;
-    /* align-items: center; */
-    /* flex-direction: column; */
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
 } 
+.section{
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+}
 label{
     font-size: 20px;
 }
-/* .income-form{
+.income-form{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-} */
+}
 .input{
   width: 170px;
 }
@@ -67,18 +73,33 @@ button:hover{
 }
 
 .incomes-container,
-.expense-container{
+.expenses-container{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     /* border: 1px solid green; */
 }
 .incomes-list,
-.expense-list{
+.expenses-list{
 list-style: none;
-min-width: 40%
+min-width: 40%;
+padding-top: 10px
 }
-.income,
-.expense{
+.incomes-list li {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.expenses-list li {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.incomes,
+.expenses{
     margin: 5px;
     background-color: #fff;
     color: #000;
@@ -87,21 +108,31 @@ min-width: 40%
     justify-content: space-between;
     align-items: center;
 }
-.income li,
-.expense li{
-    flex: 1;
-}
+
 .expense-item,
 .income-item{
-    padding: 0px 10px;
+    /* padding: 0px 10px; */
 }
 .edit-btn{
     background-color: #668cff;
+    margin-left: 10px;
+    margin-top: 5px;
 }
 .trash-btn{
 background-color: #2a1d3f;
+margin-left: 5px;
+margin-top: 5px;
+
 }
 .fa-trash,
 .fa-pen-to-square{
     pointer-events: none;
+}
+
+.confirm-btn{
+    background-color: #06ff06d2;
+    margin: 0 10px
+}
+.cancel-btn{
+    background-color: #ff0000;
 }
